<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Start Screen-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="StartScreen" customModule="iOSAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yrV-RK-08Y">
                                <rect key="frame" x="161.66666666666666" y="568.66666666666663" width="66.666666666666657" height="40"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="miZ-cc-MXE"/>
                                </constraints>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Start">
                                            <attributes>
                                                <font key="NSFont" metaFont="system" size="20"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="20"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <segue destination="ChM-aV-Wnu" kind="show" id="ce5-sZ-KGO"/>
                                </connections>
                            </button>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mu3-Pp-h5W">
                                <rect key="frame" x="45" y="248.66666666666663" width="300" height="300"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="300" id="I2p-sX-2R2"/>
                                    <constraint firstAttribute="width" secondItem="Mu3-Pp-h5W" secondAttribute="height" multiplier="1:1" id="J4i-Do-pHo"/>
                                </constraints>
                            </imageView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="0.95686274509803915" green="0.76470588235294112" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="Mu3-Pp-h5W" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9Eo-wr-S0F"/>
                            <constraint firstItem="Mu3-Pp-h5W" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-30" id="Iry-Mo-zLe"/>
                            <constraint firstItem="yrV-RK-08Y" firstAttribute="top" secondItem="Mu3-Pp-h5W" secondAttribute="bottom" constant="20" id="kS9-L4-5nU"/>
                            <constraint firstItem="yrV-RK-08Y" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tUk-Uu-X87"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="startImageView" destination="Mu3-Pp-h5W" id="t3s-ZW-M4t"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="48" y="-2"/>
        </scene>
        <!--Main Tab Bar Controller-->
        <scene sceneID="JAo-59-g81">
            <objects>
                <tabBarController id="ChM-aV-Wnu" customClass="MainTabBarController" customModule="iOSAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="SUp-4d-Dfv"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WvR-9k-4dF">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                <color key="value" red="0.95686274510000002" green="0.76470588240000004" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </tabBar>
                    <connections>
                        <outlet property="tabBar" destination="WvR-9k-4dF" id="pqQ-k9-uRU"/>
                        <segue destination="VX3-i5-ixG" kind="relationship" relationship="viewControllers" id="7qI-1N-LtN"/>
                        <segue destination="QYe-Qy-wVu" kind="relationship" relationship="viewControllers" id="9Tt-I0-pFh"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="f65-Fj-JF9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="846" y="-2"/>
        </scene>
        <!--Products-->
        <scene sceneID="sQC-7V-KsL">
            <objects>
                <tableViewController id="VX3-i5-ixG" customClass="ProductsController" customModule="iOSAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="7jR-l0-9Cl">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <connections>
                            <outlet property="dataSource" destination="VX3-i5-ixG" id="g7t-KD-5Kr"/>
                            <outlet property="delegate" destination="VX3-i5-ixG" id="LYc-rd-bsA"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Products" image="house.fill" catalog="system" id="qMh-gt-jwg"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1sY-u1-VWx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1762" y="-369"/>
        </scene>
        <!--Cart-->
        <scene sceneID="fV6-kw-dZc">
            <objects>
                <tableViewController id="QYe-Qy-wVu" customClass="CartController" customModule="iOSAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="eFp-we-3Uq">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <connections>
                            <outlet property="dataSource" destination="QYe-Qy-wVu" id="FLv-um-CZH"/>
                            <outlet property="delegate" destination="QYe-Qy-wVu" id="dIC-Ty-dvz"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Cart" image="cart.fill" catalog="system" id="DRl-pC-grC"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="oFD-Il-nq5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1762" y="330"/>
        </scene>
    </scenes>
    <resources>
        <image name="cart.fill" catalog="system" width="128" height="102"/>
        <image name="house.fill" catalog="system" width="128" height="104"/>
        <systemColor name="labelColor">
            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
