...
    }
    
    private func configureUI() {
        self.addButton.layer.cornerRadius = 5
        self.addButton.layer.masksToBounds = true
        self.addButton.tintColor = .white
        self.addButton.setTitle("Add", for: .normal)
    }
    
    private func checkButtonState() {
        if self.currentCount > self.minCount {
            self.decrementButton.isEnabled = true
            self.decrementButton.alpha = 1.0
...
